testsuite/tests/warnings/should_fail/WarningCategoryInvalid.hs
module WarningCategoryInvalid {-# WARNING in "invalid-category1" "Invalid category 1" #-} where

{-# WARNING in "x-IN VALID-category2" wurble "Invalid category 2" #-}
wurble :: ()
wurble = ()
